Fix tiny font size for version string
This was almost unreadable.

--- a/dokuforge/static/style.css
+++ b/dokuforge/static/style.css
@@ -131,7 +131,7 @@ textarea {
 }
 
 .versionstring {
-    font-size: 0.9ex;
+    font-size: 1.5ex;
     text-align: center;
 }
 .tocpart {
